tests/NormalTests/paczka1/small_fuzzy/71674563.err
Error in line 6: ri7 A310 13,7
Error in line 5: cEMjeoq S391 84,0
Error in line 2: ckXTsfH9 S106 97,1
